# job-hunter

./: .gitignore  README.md  config.yaml  pyproject.toml  render.yaml  requirements.txt  state.db
.github/workflows/: run.yml
data/: linkedin_ingest.json
job_hunter/: __init__.py  cli_linkedin_scrape.py  main.py  server.py
job_hunter/core/: company_discovery.py  filter_window.py  fit_scorer.py  health.py  job_io.py  llm_providers.py  models.py  normalize.py  notify_email.py  pipeline_checkpoint.py  profile_loader.py  profile_merge.py  raw_job_io.py  resume_text.py  rules.py  state.py  tier_gate.py
job_hunter/sources/: __init__.py  base.py  greenhouse.py  lever.py  linkedin.py  naukri.py  rss.py  serpapi.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  main.tsx  theme.ts
